clusters/home/apps/mediabox/qbittorrent/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent
  namespace: mediabox
  annotations:
    external-dns.kubernetes.io/hostname: "qt.layertwo.dev"
    external-dns.kubernetes.io/target: "proxy-external.layertwo.dev"
    layertwo.dev/publish: "all"
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    kubernetes.io/ingress.class: external
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`qt.layertwo.dev`) && PathPrefix(`/api/v2/app/version`)
    kind: Rule
    services: &services
    - name: qbittorrent
      port: 9091
    middlewares:
      - name: default-headers-mediabox
  - match: Host(`qt.layertwo.dev`)
    kind: Rule
    services: *services
    middlewares:
      - name: default-headers-mediabox
      - name: mediabox-oidc
